src/objects/Sales_by_Categories__x.object
<CustomObject>
    <description>Sales_by_Categories</description>
    <externalDataSource>Northwind</externalDataSource>
    <externalName>Sales_by_Categories</externalName>
    <fields>
        <fullName>CategoryID__c</fullName>
        <description>CategoryID</description>
        <externalDeveloperName>CategoryID</externalDeveloperName>
        <label>CategoryID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <description>CategoryName</description>
        <externalDeveloperName>CategoryName</externalDeveloperName>
        <label>CategoryName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>ProductName</description>
        <externalDeveloperName>ProductName</externalDeveloperName>
        <label>ProductName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSales__c</fullName>
        <description>ProductSales</description>
        <externalDeveloperName>ProductSales</externalDeveloperName>
        <label>ProductSales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Sales_by_Categories</label>
    <pluralLabel>Sales_by_Categories</pluralLabel>
</CustomObject>